# external-control-module-for-diesel-heaters

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  TODO.txt  commitmessage  compile_commands.json  requirements.txt  run_unity_tests.sh  unit_tests  update_compile_commands.sh  update_compile_commands_linux.sh  update_compile_commands_windows.sh
.cache/clangd/index/: Arduino.h.1F7301D2ABDBAA4A.idx  CDC.cpp.3528F97D8366FFEE.idx  CDC.cpp.DC5C45C2FB64C148.idx  DallasTemperature.cpp.7454F93769772F52.idx  DallasTemperature.h.4B2033927B032842.idx  Encoder.cpp.02621D6B96CCB932.idx  Encoder.cpp.7A8759EA1892BD14.idx  Encoder.h.3386BFFFF1DA5EBA.idx  Encoder.h.B18C4FAE8185AAA4.idx  HardwareSerial.cpp.EEDB14E3CEC6D1B1.idx  HardwareSerial.cpp.FDA0FBE0A72D2A3B.idx  HardwareSerial.h.E595E651C3074623.idx  HardwareSerial.h.F04192D030C6032C.idx  HardwareSerial0.cpp.CFEB621599DDDEAD.idx  HardwareSerial1.cpp.1ECDF0DA07374EB5.idx  HardwareSerial2.cpp.F939A20B8409B1CC.idx  HardwareSerial3.cpp.D5998C26C69BF172.idx  HardwareSerial_private.h.E3E2ACDC5BD1CAE5.idx  (+132 more)
Heizungsteuerung_main_code.ino/: Heizungsteuerung_main_code.ino.ino
I2C_Scanner/: I2C_Scanner.ino
build-tests/: CTestTestfile.cmake  test_unity_entry
build_test/: unit_tests
cmake/arduino_stubs/: Arduino.h  DallasTemperature.h  Encoder.h  LiquidCrystal_I2C.h  OneWire.h  Wire.cpp
includes/: ArduinoStubs.h  config.h  controller.h  controller_construction.h  devicegroups.h  display.h  display_driver.h  displaydriver.h  encoder_driver.h  hardwaredrivers.h  interfaces.h  library_adapter.h  memory.h  modularmain.ino  myEncoder.h  pch_test.h  pushbuttons.h  relais.h  relaisdriver.h  statistics.h  temperature_sensor.h  temperature_sensor_driver.h  test_devices.h  toggle_switches.h  types.h  units_for_testing.h
index/: Arduino.h.D6758B9B441B8677.idx  DallasTemperature.cpp.39FCDC271A03527A.idx  HardwareSerial2.cpp.BC850B8B79BF4A36.idx  HardwareSerial3.cpp.3996C6FEAEF81FCE.idx  HardwareSerial_private.h.13F829343D0CF2F8.idx  LiquidCrystal_I2C.cpp.4D2F89AB7B786878.idx  OneWire.h.11C71562F451E4F6.idx  PluggableUSB.cpp.B5F220349F66F1E2.idx  Printable.h.6B9D1B6C68A46DFD.idx  WMath.cpp.F948A1407A1660C3.idx  Wire.cpp.EE98E100B9225DB3.idx  Wire.h.12F88ADCA1FF0A8F.idx  binary.h.031655180B7E6C33.idx  direct_pin_read.h.CE6C03AB37EEA960.idx  eeprom.h.0E6AD378256EA67E.idx  fuse.h.E84704E278409233.idx  hooks.c.827151B896EAD993.idx  interrupt.h.E3E9ECD8F62630D0.idx  interrupt_pins.h.91014382E8293ED1.idx  iom328p.h.B4316D84F9F19994.idx  lcddisplay.cpp.0040F4A2640CFF80.idx  lcddisplay.h.B48D7FA8A9DB8699.idx  main.cpp.3E2D46329422A90B.idx  stddef.h.E103068B3D07686B.idx  stdint.h.1494BD1B8A3B1AE7.idx  wiring.c.0E8BA5F404AF254B.idx  wiring_analog.c.96BD82211D0F1C03.idx  wiring_private.h.E7FDC92971DCD4C5.idx  wiring_pulse.c.B5B16FBA0342833C.idx
mk/: globals.mk  gtest_rules.mk  gtest_variables.mk  mcu_rules.mk  mcu_variables.mk  test_rules.mk  test_variables.mk  toolchain.mk
modularmain/: Klassendiagramm2.drawio  To_Dos.txt  arduino-cli _commands.txt  chatgpt.txt  classes.cpp  controller.h  devicegroups.h  functions.cpp  functions.h  hardwaredrivers.h  hardwarefunctions.cpp  hardwarefunctions.h  lcddisplay.cpp  lcddisplay.h  logicfunctions.cpp  logicfunctions.h  main.cpp  memory.h  modularmain.ino  statistics.h  types.h  variables.cpp  variables.h
modularmain.ino/: hardwarefunctions.cpp  hardwarefunctions.h  harwarefunctions.cpp  lcddisplay.cpp  lcddisplay.h  logicfunctions.cpp  logicfunctions.h  modularmain.ino.ino  variables.cpp  variables.h
modularmain.ino/doc/: heizungssteuerung.drawio
neovim_utils/: quickfix_list.txt
scripts/: run_test.py  setup.sh
src/: controller.cpp  controller_construction.cpp  devicegroups.cpp  display.cpp  display_driver.cpp  displaydriver.cpp  encoder_driver.cpp  hardwaredrivers.cpp  library_adapter.cpp  linker_stubs.cpp  main.cpp  myEncoder.cpp  pushbuttons.cpp  relais.cpp  relaisdriver.cpp  temperature_sensor.cpp  temperature_sensor_driver.cpp  toggle_switches.cpp
tests/: ArduinoStubs.cpp  SystemController_unit_tests.cpp  display_driver_unit_tests.cpp  display_unit_tests.cpp  encoder_driver_unit_test.cpp  input_handle_test.cpp  input_switches_test.cpp  relais_driver_unit_tests.cpp  relais_unit_tests.cpp  systemController_black_box_tests.cpp  systemController_integration_test.cpp  systemController_white_box_tests.cpp  systemcontroller_integration_test.cpp  temperature_sensor_unit_test.cpp  test_cases.def  test_devices.cpp  test_devices.h  test_unity_entry.cpp  unit_tests.cpp
(+41 files in other folders)
